--- a/WSGeometry/DESCRIPTION
+++ b/WSGeometry/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 1.2
 Date: 2021-12-09
 Author: Florian Heinemann [aut, cre], Nicholas Bonneel [ctb]
 Maintainer: Florian Heinemann <florian.heinemann@uni-goettingen.de>
-Description: Includes a variety of methods to compute objects related to the 'Wasserstein distance' (also known as 'Kantorovich distance' or 'Earth-Mover distance'). The main effort of this package is to allow for computations of 'Wasserstein barycenter' using regularised, unregularised and stochastic methods. It also provides convenient wrappers to call the 'transport' package with more general inputs. Handy visual tools are provided to showcase, barycenters, animations of optimal transport geodesics and animations of principal components in the 'Wasserstein space'. It also includes tools to compute Kantorovich-Rubinstein distances and barycenters. 
+Description: Includes a variety of methods to compute objects related to the 'Wasserstein distance' (also known as 'Kantorovich distance' or 'Earth-Mover distance'). The main effort of this package is to allow for computations of 'Wasserstein barycenter' using regularised, unregularised and stochastic methods. It also provides convenient wrappers to call the 'transport' package with more general inputs. Handy visual tools are provided to showcase, barycenters, animations of optimal transport geodesics and animations of principal components in the 'Wasserstein space'. It also includes tools to compute 'Kantorovich-Rubinstein' distances and barycenters. 
 License: GPL-3
 Encoding: UTF-8
 Imports: Rcpp, transport, RSpectra, expm, plot3D, imager, grDevices, stats, graphics, lpSolve, Matrix
