--- a/WSGeometry/NAMESPACE
+++ b/WSGeometry/NAMESPACE
@@ -7,27 +7,21 @@ export(geodesic_pos)
 export(grid_positions)
 export(kr_bary)
 export(kr_dist)
+export(krfrechet_func)
 export(location_scatter_bary)
+export(marginal_plot)
 export(multi_marginal)
+export(multiwppplot)
 export(plotGeodesic)
 export(smear)
 export(wasserstein_bary)
+export(wpp)
+export(wppplot)
 export(ws_bary_maaipm)
 export(ws_dist)
 export(ws_logpca)
 import(grDevices)
 import(graphics)
 import(stats)
-importFrom(Matrix,Matrix)
-importFrom(Matrix,sparseMatrix)
-importFrom(RSpectra,eigs)
-importFrom(RSpectra,eigs_sym)
 importFrom(Rcpp,evalCpp)
-importFrom(expm,sqrtm)
-importFrom(imager,grayscale)
-importFrom(imager,load.image)
-importFrom(plot3D,scatter3D)
-importFrom(transport,pp)
-importFrom(transport,transport)
-importFrom(transport,wpp)
 useDynLib(WSGeometry)
