added most important parts of unbalancedTransport

--- a/WSGeometry/NAMESPACE
+++ b/WSGeometry/NAMESPACE
@@ -13,7 +13,11 @@ export(marginal_plot)
 export(multi_marginal)
 export(multiwppplot)
 export(plotGeodesic)
+export(plot_1D_transport)
+export(plot_tree)
+export(regularized_transport)
 export(smear)
+export(tree_transport)
 export(wasserstein_bary)
 export(wpp)
 export(wppplot)
