add sinkhorn_divergence and wfr functions; change sinkhorn and scaling to return usual transport costs, change epsi scaling criterions

--- a/WSGeometry/NAMESPACE
+++ b/WSGeometry/NAMESPACE
@@ -16,9 +16,11 @@ export(plotGeodesic)
 export(plot_1D_transport)
 export(plot_tree)
 export(regularized_transport)
+export(sinkhorn_divergence)
 export(smear)
 export(tree_transport)
 export(wasserstein_bary)
+export(wfr)
 export(wpp)
 export(wppplot)
 export(ws_bary_maaipm)
